mail/templates/pixelegg/app.css
/* ... */
.mail-index_vacation {
  display: inline-block;
  vertical-align: top;
}
.mail-index_vacation > div {
  text-align: center;
  line-height: 110%;
}
.mail-index_vacation > div > span {
  color: red;
}
#mail-index_mailPreview_blank {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: white;
  z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 200%;
}
#mail-index_mailPreview_blank::part(base) {
  justify-content: center;
  align-items: center;
}
#mail-index_mailPreview_blank[disabled] {
  display: none;
}
.mail_DisplayNone {
  display: none !important;
}
.mail-index_quotaDisplayNone {
  display: none !important;
}
.mail-index_QuotaGreen,
.mail-index_QuotaYellow,
.mail-index_QuotaRed {
  width: 100px !important;
}
.mail-index_QuotaGreen > div {
  background-color: green !important;
}
.mail-index_QuotaYellow > div {
  background-color: yellow !important;
}
.mail-index_QuotaRed > div {
  background-color: red !important;
}
/*
 influence the tree display and scrolling behavior
*/
#mail-tree_target {
  min-height: 35px;
  display: block;
  display: -moz-inline-stack;
  display: -moz-box;
  width: 100%;
  overflow: hidden;
  overflow-y: auto;
  z-index: 100;
}
/*
 we need the the image displayed with our buttons on the left side
*/
input[type=button] {
  background-position: left;
}
#mail-index_messageIFRAME {
  width: 100%;
  height: 100%;
  border: 0;
}
/*********************************
 ************  mailCompose  ******
 *********************************/
div.mailUploadSection {
  border-top: 1px solid silver;
  margin-top: 16px;
  width: 99%;
}
div.mailUploadSection > div.et2_hbox {
  margin-top: -10px;
  margin-left: 6px;
  margin-right: -12px;
  background-color: white;
  display: table-caption;
}
div.mailUploadSection > div.et2_hbox > label {
  padding-left: 4px;
  white-space: nowrap;
}
#mail-compose_filemode {
  margin-left: 6px;
}
#mail-compose_expiration > input {
  min-width: 15ex;
}
#mail-compose_selectFromVFSForCompose {
  width: 20px;
  float: none;
  background-color: transparent;
  background-size: 18px;
  padding: 0;
  background-position: center;
  border: none;
}
#mail-index_button\[mailcreate\],
#composeToolbar-send {
  color: white;
  background-color: #189800;
}
.mail-compose_composeToolbar {
  border-left: 1px solid silver;
  border-top: 1px solid silver;
  border-right: 1px solid gray;
  border-bottom: 1px solid gray;
  background-color: #c0d2ec;
  background-position: center;
  background-repeat: repeat-x;
}
.mail-compose_composeToolbarr > span {
  padding: 10px;
  white-space: nowrap;
}
.mail-compose_composeToolbar > span.priority {
  border-right: none;
}
.compose_egw_icons {
  height: 24px;
  width: 24px;
  vertical-align: middle;
}
div.mail-compose_fileselector {
  width: auto;
  margin-top: 3px;
}
.mail-compose_fileselector span.et2_file_span {
  background-repeat: no-repeat;
  background-image: url(../default/images/attach.svg);
  background-size: inherit;
  background-position: left;
}
.mail-compose_fileselector div.progress {
  display: none;
}
#mail-compose_button\[send\] {
  text-align: left;
  font-weight: bold;
  padding-left: 30px;
  width: 80px;
  background-image: url(../default/images/mail_send.svg) !important;
  background-position: left;
  background-repeat: no-repeat;
}
.mailDisplay {
  position: relative;
  background-color: white;
  width: 100%;
  height: 100%;
}
#mail-index_mail-index-preview {
  overflow: hidden;
  position: relative;
  background-color: white;
  width: calc(100% - 1em);
  margin-left: 1em;
}
.previewWrapper {
  height: 100%;
}
.previewWrapper .et2_details.et2_details_expanded .et2_details_wrapper {
  display: block;
  position: absolute;
  top: 4em;
  box-shadow: 1px 1px 2px 1px silver;
  width: calc(100% - 6em);
  padding: 1em;
  background: white;
  max-height: 12em;
  overflow-y: auto;
}
#mail-index_mailPreview .th {
  display: none;
}
#mail-index_mailPreview > div,
#mail-index_mailPreview > * {
  padding-left: 8px !important;
}
#mail-index_mailPreview_subject,
#mail-display_mail_displaysubject {
  margin-bottom: 1em;
  font-size: 1.2em;
}
et2-details.details::part(summary),
et2-details.attachments::part(summary) {
  padding-left: 1em;
}
.mailDisplay et2-details::part(base),
.previewWrapper et2-details::part(base) {
  border: none;
}
.mailPreviewHeaders et2-details::part(header) {
  padding: 0;
}
#mail-index_mailPreview .et2_email > span {
  display: inline;
}
.maildisplayAllAdresses {
  max-height: 245px !important;
  overflow: scroll;
  overflow-x: hidden;
}
#mail-compose_composeToolbar {
  padding: 0px !important;
  border: none;
}
#mail-compose_composeToolbar > button {
  padding: 0.2em 0.4em;
}
#mail-compose_composeToolbar > img {
  width: 16px;
  padding: 0px;
  height: 16px !important;
}
#mail-compose_composeToolbar > button > span > img {
  width: 16px;
  padding: 0px;
  height: 16px !important;
}
#mail-compose_composeToolbar > button {
  padding: 0.2em 0.4em;
}
#mail-compose_to div.ms-sel-ctn,
#mail-compose_cc .ms-sel-ctn,
#mail-compose_bcc .ms-sel-ctn {
  max-height: 75px;
}
#mail-display_toolbar > button > span {
  padding: 0.2em 0.4em;
}
#mail-display_toolbar > button > span > img {
  width: 16px;
  padding: 0px;
  height: 16px !important;
}
#mail-display_toolbar .et2_button_icon,
.previewAttachmentArea .et2_button_icon,
#mail-display_mail_displayattachments .et2_button_icon {
  width: 16px;
  height: 16px;
}
.mailPreviewIcons {
  position: absolute;
  right: 0;
  top: 0;
}
#mail-index_toolbar {
  padding: 0px;
  height: 35px;
}
#mail-index_toolbar > button > span {
  padding: 0.2em 0.4em;
}
#mail-index_toolbar > button > span > img {
  width: 16px;
  padding: 0px;
  height: 16px !important;
}
#mail-index_toolbar > #toolbar-actionlist {
  width: auto;
}
#mail-index_mailPreviewContainer {
  position: absolute;
  top: 9em;
  bottom: 0;
  left: 0px;
  right: 5px;
}
/* ... */

